# stm32f3discovery-7_seg_led

./: .gitignore  Cargo.toml  openocd.gdb
src/: gpio.rs  hertz.rs  main.rs  pin.rs  shift.rs  spi.rs  timer.rs
