[package]
name = "seven_segment_led"
version = "0.1.0"
authors = ["lenna_kun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-semihosting = "0.5.3"
embedded-hal = "0.2.3"
cast = { version = "0.2.3", default-features = false }

[dependencies.f3]
features = ["rt"]
version = "0.6.1"
