[package]
name = "seven_segment_led"
version = "0.1.0"
authors = ["lenna_kun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cast = { version = "0.2.3", default-features = false }
cortex-m-rt = "0.6.12"
panic-semihosting = "0.5.3"
stm32f30x = "0.8.0"
